<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="loginViewModel"
            type="com.lksnext.parking.viewmodel.LoginViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fillViewport="true"
        >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minHeight="600dp"
        >

        <ProgressBar
            android:id="@+id/login_top_progressbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@android:style/Widget.Material.ProgressBar.Horizontal"
            android:indeterminate="true"
            android:visibility="gone"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.00"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />


        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/robotobold"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="?attr/colorOnSurface"
            android:textSize="57sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.06"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_login_email"
            style="@style/TextInputStyle"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:hint="@string/usuario_hint"
            android:inputType="text"
            app:helperText="@string/usuario_helper"
            app:layout_constraintVertical_bias="0.31"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_email_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_input_password"
            style="@style/TextInputStyle"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textEmailAddress"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:layout_constraintVertical_bias="0.45"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            style="@style/constraintHeader"
            android:id="@+id/heading"
            android:layout_width="match_parent"
            android:text="@string/login"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2"
            app:layout_constraintBottom_toBottomOf="parent" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.6"
            app:layout_constraintBottom_toBottomOf="parent"
            >
            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginButton"
                style="@style/PrimaryButton"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_marginTop="15dp"
                />

            <TextView
                android:id="@+id/forgotPassButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:fontFamily="@font/robotobold"
                android:text="@string/forgot_password"
                android:layout_marginTop="5dp"
                android:textColor="?attr/colorOnSurface"
                />
        </LinearLayout>



        <com.google.android.material.button.MaterialButton
            android:id="@+id/googleButton"
            android:fontFamily="@font/robotobold"
            android:textColor="?attr/colorOnSecondaryContainer"
            android:backgroundTint="?attr/colorSecondaryContainer"
            android:paddingBottom="12sp"
            android:paddingTop="12sp"
            android:paddingLeft="52sp"
            android:paddingRight="52sp"
            android:textSize="18sp"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:text="@string/google_login"
            android:drawableLeft="@drawable/googleicon"
            app:layout_constraintVertical_bias="0.76"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintVertical_bias="0.96"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            >

            <TextView
                android:id="@+id/notRegistered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:fontFamily="@font/robotobold"
                android:text="@string/not_registered"
                android:textColor="?attr/colorOnSurface"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/googleButton" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/createAccount"
                style="@style/PrimaryButton"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:text="@string/register"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/notRegistered" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</layout>
